--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,6 @@
-<ion-view view-title="Playlist">
+<ion-view view-title="Account">
   <ion-content>
-    <h1>Playlist</h1>
+    <h1>Details</h1>
+      </ion-item>
   </ion-content>
 </ion-view>
